apps/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be
spec:
  selector:
    app: be
  ports:
    - port: 8080
      targetPort: 8080
