apps/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be
spec:
  ingressClassName: nginx
  rules:
    - host: be.devths.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be
                port:
                  number: 8080
